[package]
name = "texcomplete"
version = "1.1.0"
authors = ["hecal3 <hecal3@users.noreply.github.com>"]


[lib]
name = "texparser"
path = "src/lib.rs"

[[bin]]
name = "texcomplete"
path = "src/main.rs"

[dependencies]
glob = "0.2"
clap = "2.20"
regex = "1.5"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
